--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "start": "json-server --watch public/payment.json"
   },
   "dependencies": {
     "vue": "^2.5.13",
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.1",
     "@vue/cli-service": "^3.0.0-beta.1",
+    "json-server": "^0.12.1",
     "vue-template-compiler": "^2.5.13"
   },
   "babel": {
